# GI-SERVICE

./: .gitignore  README.md
src/: MANIFEST.in  MIGRATION_SUMMARY.md  PACKAGE_INFO.md  README.md  main.py  pyproject.toml  setup.py  test_package.py
src/opendata/: __init__.py  py.typed
src/opendata/routers/: __init__.py  payload_incoming_router.py
src/opendata/services/: payload_incoming_attributes.py
