[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendata"
version = "0.1.0"
description = "OpenData API - A Python package for OpenGIN (Open General Information Network) data processing and API services"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["opendata", "api", "fastapi", "government", "data-processing"]
authors = [
    {name = "GI-SERVICE Team", email = "info@gi-service.org"}
]
maintainers = [
    {name = "GI-SERVICE Team", email = "info@gi-service.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.117.0",
    "uvicorn>=0.36.0",
    "requests>=2.32.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "protobuf>=6.32.0",
    "httpx>=0.28.0",
    "starlette>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/vibhatha/GI-SERVICE"
Documentation = "https://github.com/vibhatha/GI-SERVICE#readme"
Repository = "https://github.com/vibhatha/GI-SERVICE"
Issues = "https://github.com/vibhatha/GI-SERVICE/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["opendata*"]
exclude = ["tests*", "*.tests", "*.tests.*", "__pycache__"]

[tool.setuptools.package-data]
opendata = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

